<resources>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="discover">Discover</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="second_module">Second Module</string>
    <string name="click_here_to_register"><u>Click here to register</u></string>
    <string name="announcements">Announcements</string>
    <string name="search">Search</string>
    <string name="offers">Offers</string>
    <string name="recently_added_products">Recently Added Products</string>
    <string name="products">Products</string>
    <string name="product_detail">Product Detail</string>
    <string name="exclusive_deals">Exclusive Deals</string>
    <string name="recently_viewed">Recently Viewed</string>
</resources>
