<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_nav_home_item"
        android:icon="@drawable/ic_round_home"
        android:title="@string/home" />
    <item
        android:id="@+id/main_nav_categories_item"
        android:icon="@drawable/ic_grid"
        android:title="@string/categories" />
    <item
        android:id="@+id/main_nav_cart_item"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />
    <item
        android:id="@+id/main_nav_profile_item"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />
    <item
        android:id="@+id/main_nav_second_module_item"
        android:icon="@drawable/ic_star"
        android:title="@string/second_module" />
</menu>